--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
 <head>
     <title>Ládis Nosek</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Patrick Hand', cursive;
+        }
+
+        .centered-text {
+            margin: auto;
+            text-align: center;
+            position: relative;
+            top: 50pt;
+            font-size: 70pt;
+        }
+
+        #lada {
+            position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: -1000;
+        }
+    </style>
 </head>
 
 <body>
-    <img id="Ládis Nosek" src="img/lada.jpg">
+<h1 class="centered-text">Ahoooj!</h1>
+<img id="lada" title="Ládis Nosek" src="img/lada.jpeg" height="50%">
 </body>
 
 </html>
